[package]
name = "ratelimiter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-std = { version="1.5.2", features = ["stargate"] }
cosmwasm-schema = "1.5.2"
cw-storage-plus = "1.2.0"
thiserror = "1.0.56"
cwfees = {path = "../../crates/cwfees"}