[package]
name = "cwfees"
version = "0.1.0"
authors = ["engineering@philabs.xyz"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { version="1.5.2" , features = ["stargate"]}
cosmwasm-schema = "1.5.2"
serde = { version = "1.0.189", default-features = false, features = ["derive"] }
prost = "0.12.3"

[dev-dependencies]
cosmos-sdk-proto = "0.20.0"

[build-dependencies]
prost-build = "0.12.3"
